# rpg_maker

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: DefaultCompilerOptions.cmake
display_layer/: CMakeLists.txt
display_layer/include/rpgmk/dl/: window.hpp  window_attributes.hpp
display_layer/src/: x11_opengl_window.cpp
include/rpgmk/: main.hpp
